--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finhelper",
-  "version": "1.2.36",
+  "version": "1.2.37",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -20,16 +20,13 @@
     "extends": "react-app"
   },
   "homepage": "https://github.com/olegstan/finhelper#readme",
-  "dependencies": {
-    "laravel-request": "^1.1.14",
-    "moment": "^2.29.1"
-  },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.0.0",
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "moment": "^2.30.1"
   },
   "babel": {
     "presets": [
