--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finhelper",
-  "version": "1.3.39",
+  "version": "1.3.44",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -32,5 +32,9 @@
     "presets": [
       "@babel/preset-react"
     ]
+  },
+  "dependencies": {
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0"
   }
 }
