--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finhelper",
-  "version": "1.3.48",
+  "version": "1.3.49",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -26,15 +26,14 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.0.0",
     "copyfiles": "^2.4.1",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "exact-math": "^2.2.3"
   },
   "babel": {
     "presets": [
       "@babel/preset-react"
     ]
-  },
-  "dependencies": {
-    "crypto": "^1.0.1",
-    "crypto-js": "^4.2.0"
   }
 }
