--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finhelper",
-  "version": "1.3.49",
+  "version": "1.3.50",
   "description": "",
   "main": "dist/index.js",
   "repository": {
@@ -20,7 +20,7 @@
     "extends": "react-app"
   },
   "homepage": "https://github.com/olegstan/finhelper#readme",
-  "devDependencies": {
+  "peerDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
